edit header & footer bio

--- a/bio.html
+++ b/bio.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/styles.css">
   <title>Document</title>
@@ -11,9 +11,9 @@
 <body>
   <header>
     <div id="logo">
-      <img src="https://place-hold.it/50x50/ddd">
+      <img src="img/storeyteller.jpg" width="150px" height="100px">
+      <h1 class="styling">Story Not Story</h1>
     </div>
-    <h1>Storybook Generator</h1>
     <nav>
       <a href="">Home</a>
       <a href="">Story</a>
@@ -66,7 +66,7 @@
       <p> Contact Us for More Updates</p>
     </div>
     <div id="authors">
-      <h2> Project &copy</h2>
+      <h2 class="styling"> Project &copy</h2>
       <div class="circle"></div>
       <p>Nicholas Seidel</p>
       <div class="circle"></div>
