--- a/bio.html
+++ b/bio.html
@@ -12,7 +12,7 @@
   <header>
     <div id="logo">
       <img src="img/storeyteller.jpg" width="150px" height="100px">
-      <h1 class="styling">Story Not Story</h1>
+      <h1 class="styling">"Story Not Story"</h1>
     </div>
     <nav>
       <a href="">Home</a>
