added links for all the bars

--- a/bio.html
+++ b/bio.html
@@ -15,9 +15,9 @@
       <h1 class="styling">"Story Not Story"</h1>
     </div>
     <nav>
-      <a href="">Home</a>
-      <a href="">Story</a>
-      <a href="">About Us</a>
+      <a href="https://group-c-201d90.github.io/awesome-project/">Home</a>
+      <a href="https://group-c-201d90.github.io/awesome-project/profile.html">Story</a>
+      <a href="https://group-c-201d90.github.io/awesome-project/bio.html">About Us</a>
     </nav>
   </header>
   
