edit my info in bio

--- a/bio.html
+++ b/bio.html
@@ -50,7 +50,7 @@
       </div>
     <div class="bioDiv">
       <h3>Nerissa</h3>
-      <p>Hi, my name is Nerissa Leynes. I served 8 years of Active Duty in the Navy and am currently in the reserves. I decided to pursue a career in the tech field because I found coding interesting, stressful, and challenging. JavaScript allows me to implement features and make the web page interactive; it is why I chose this language. Another language I’d like to pursue other than JavaScript is python. Also, I’d like to build an app and be part of the team in a company like Google. I took some Computer Science classes in 2008, but due to the gap, I honestly forgot everything. It pushes me to take this route and finish what I started before.</p>
+      <p>Hi, my name is Nerissa Leynes. I served 8 years of Active Duty in the Navy and am currently in the reserves. I decided to pursue a career in the tech field because I found coding interesting, stressful, and challenging. I like to build apps and be part of the team in a company like Google. I took some Computer Science classes in 2008, but due to the gap, I honestly forgot everything. It pushes me to take this route and finish what I started before. Learn coding here with me in Norfolk, Virginia</p>
     </div>
   </article>
 
