--- a/bio.html
+++ b/bio.html
@@ -4,8 +4,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/styles.css">
   <title>Document</title>
 </head>
 <body>
@@ -15,12 +15,10 @@
       <h1 class="styling">"Story Not Story"</h1>
     </div>
     <nav>
-      <!-- <a href="https://group-c-201d90.github.io/awesome-project/">Home</a>
+      <a href="https://group-c-201d90.github.io/awesome-project/">Home</a>
       <a href="https://group-c-201d90.github.io/awesome-project/profile.html">Story</a>
-      <a href="https://group-c-201d90.github.io/awesome-project/bio.html">About Us</a> -->
-      <a href="index.html">Home</a>
-      <a href="profile.html">Story</a>
-      <a href="bio.html">About Us</a>
+      <a href="https://group-c-201d90.github.io/awesome-project/bio.html">About Us</a>
+      
     </nav>
   </header>
   
