--- a/bio.html
+++ b/bio.html
@@ -27,7 +27,7 @@
     </div>
     <div class="bioDiv">
     <h3>Hunter</h3>
-    <p>Hello my name is Hunter Fehr, a proud Army veteran. I'm an active student within the Code Fellows program, aspiring to become a full stack developer. I am a fully dedicated individual that takes on new tasks head on and doesn't quit. The tech world will continue to grow, I want to on a personal and professional level to develop my skills as a developer to achieve overall growth in the niche of technology. I very much love the outdoors and exploring the wonderful area of Reno, Nv not to be confused with Reno 911. </p>
+    <p class ="bioE">Hello my name is Hunter Fehr, a proud Army veteran. I'm an active student within the Code Fellows program, aspiring to become a full stack developer. I am a fully dedicated individual that takes on new tasks head on and doesn't quit. The tech world will continue to grow, I want to on a personal and professional level to develop my skills as a developer to achieve overall growth in the niche of technology. I very much love the outdoors and exploring the wonderful area of Reno, Nv not to be confused with Reno 911. </p>
     </div>
   </article>
 
@@ -37,7 +37,7 @@
       </div>
     <div class="bioDiv">
       <h3>Zoe</h3>
-    <p> Hi my name is Zoe Gonzalez, a former ‘IT’, submariner, and proud US Navy veteran. I am an aspiring learner who loves to take on challenges head on. Technology runs the world... and I believe becoming a software developer is instrumentally helpful on a professional and personal level. Happy to be in Seattle, WA</p>
+    <p class="bioE" > Hi my name is Zoe Gonzalez, a former ‘IT’, submariner, and proud US Navy veteran. I am an aspiring learner who loves to take on challenges head on. Technology runs the world... and I believe becoming a software developer is instrumentally helpful on a professional and personal level. Happy to be in Seattle, WA</p>
     </div>
   </article>
 
@@ -47,7 +47,7 @@
       </div>
     <div class="bioDiv">
       <h3>Nerissa</h3>
-    <p>Hi, my name is Nerissa Leynes. I served 8 years of Active Duty in the Navy and am currently in the reserves. I decided to pursue a career in the tech field because I found coding interesting, stressful, and challenging. JavaScript allows me to implement features and make the web page interactive; it is why I chose this language. Another language I’d like to pursue other than JavaScript is python. Also, I’d like to build an app and be part of the team in a company like Google. I took some Computer Science classes in 2008, but due to the gap, I honestly forgot everything. It pushes me to take this route and finish what I started before.</p>
+    <p class = "bioE">Hi, my name is Nerissa Leynes. I served 8 years of Active Duty in the Navy and am currently in the reserves. I decided to pursue a career in the tech field because I found coding interesting, stressful, and challenging. JavaScript allows me to implement features and make the web page interactive; it is why I chose this language. Another language I’d like to pursue other than JavaScript is python. Also, I’d like to build an app and be part of the team in a company like Google. I took some Computer Science classes in 2008, but due to the gap, I honestly forgot everything. It pushes me to take this route and finish what I started before.</p>
     </div>
   </article>
 
